SintAnalyzer.cpp
/*
	Membros do grupo:
	Herbert Alves Batista
	Luiz Gustavo Avelino Mendes
	Thiago Henrique Balbino Dias
*/

//----------------------------------
// BIBLIOTECAS
//----------------------------------


#include <stdio.h>
#include <iostream>
#include <string>
#include "SintAnalyzer.h"
#include "SymbTab.h"
#include "RegLexico.h"
#include "LexAnalyzer.h"
#include <fstream>
#include <sstream>
using namespace std;

/**
*   Construtor
*/
SintAnalyzer::SintAnalyzer(){
registroLexico;

}


/**
*   Destrutor
*/
SintAnalyzer::~SintAnalyzer(){
}


void SintAnalyzer::teste(){
	cout << "\n\nteste ok\n\n";
}

/**
 *  Procedimento S
 */
void SintAnalyzer::S(){
    fileOut << "sseg SEGMENT STACK\n";
	fileOut << "\t\tbyte 16384 DUP(?)\n";
	fileOut << "sseg ENDS\n\n";

	fileOut << "dseg SEGMENT PUBLIC\n";
	fileOut << "\t\tbyte 16384 DUP(?)\n";
	
    if(currentToken != NULL){
            notNull = true;
        if(currentToken->cod == 'G' || currentToken->cod == '2'){
            while(notNull){
                if(currentToken->cod == 'G' || currentToken->cod == '2')
                    DECL();
                else
                    notNull = false;
                }
            }
    fileOut << "dseg ENDS\n\n";

	fileOut << "cseg SEGMENT PUBLIC\n";
	fileOut << "\t\tASSUME CS:cseg, DS:dseg\n\n";

	fileOut << "_strt:\n";
	fileOut << "\t\tmov ax, dseg\n";
	fileOut << "\t\tmov ds, ax\n";

        BLOCO();

    fileOut << "\t\tmov ah, 4Ch\n";
    fileOut << "\t\tint 21h\n";
    fileOut << "cseg ENDS\n";
    fileOut << "END _strt";
    //fileOut.flush();
    }

}

/**
 *  Procedimento DECL
 */
void SintAnalyzer::DECL(){
    if(currentToken != NULL){
            notNull = true;
        if(currentToken->cod == 'G'){
            match('G');
            LexRecord * id = currentToken;

            match('H');
            // Ação semantica
            if(id->adressTable->classe.compare("vazio")==0){
                id->adressTable->classe = "constante";
            } else {
                /**ERRO SEMANTICO**/
                cout << id->lineNumber << ":identificador ja declarado [" << id->lexema << "].";
            }
            match('1');
            SymbolNode * valor;

            VALOR(&valor);

            // Ação semantica
            id->adressTable->tipo = tabSimbNaoTerminais.search("VALOR")->tipo;
            match('K');

            // Geração de Codigo
            id->adressTable->end = dataCount;
            if(id->adressTable->tipo.compare("string")==0){

                fileOut << "\t\tbyte " << valor->lexema << "\n";
                updateDataCount(valor->lexema.length()-2);

            } else if(id->adressTable->tipo.compare("byte")==0){

                        fileOut << "\t\tbyte " << valor->lexema << "\n";
                        updateDataCount(1);

                    } else if(id->adressTable->tipo.compare("logico")==0){

                                if(valor->lexema.compare("TRUE")==0){
                                    fileOut << "\t\tbyte 255\n";
                                } else {
                                    fileOut << "\t\tbyte 0\n";
                                }
                                updateDataCount(1);

                                } else {
                                    fileOut << "\t\tsword " << valor->lexema << "\n";
                                    updateDataCount(2);
                                }

        } else {
            TIPO();

            LexRecord * id = currentToken;
            match('H');
            // Ação Semantica
            if(id->adressTable->classe.compare("vazio")==0){
                id->adressTable->classe = "variavel";
            } else {
                /**ERRO SEMANTICO**/
                cout << id->lineNumber << ":identificador ja declarado [" << id->lexema << "].";
            }
            //Ação Semantica
            id->adressTable->tipo = tabSimbNaoTerminais.search("TIPO")->tipo;

            if(notNull){
                if(currentToken->cod == '1'){
                    match('1');
                    SymbolNode * valor;
                    VALOR(&valor);
                    // Ação Semantica
                    if(id->adressTable->tipo != tabSimbNaoTerminais.search("VALOR")->tipo){
                       /**ERRO SEMANTICO**/
                       cout << id->lineNumber << ":tipos incompativeis.";
                    }

                    // Geração de Codigo
                    id->adressTable->end = dataCount;

                    if(id->adressTable->tipo.compare("string")==0){

                        fileOut << "\t\tbyte " << valor->lexema << "\n";
                        fileOut << "\t\tbyte " << 256 - valor->lexema.length() << " DUP(?)\n";
                        updateDataCount(256);

                    } else if(id->adressTable->tipo.compare("byte")==0){

                            fileOut << "\t\tbyte " << valor->lexema << "\n";
                            updateDataCount(1);

                        } else if(id->adressTable->tipo.compare("logico")==0){

                                    if(valor->lexema.compare("TRUE")==0){
                                        fileOut << "\t\tbyte 255\n";
                                    } else {
                                        fileOut << "\t\tbyte 0\n";
                                    }
                                    updateDataCount(1);

                                    } else {
                                        fileOut << "\t\tsword " << valor->lexema << "\n";
                                        updateDataCount(2);
                                    }
                } else {

                    // Geração de Codigo
                    id->adressTable->end = dataCount;

                    if(id->adressTable->tipo.compare("string")==0){

                        fileOut << "\t\tbyte 256 DUP(?)\n";
                        updateDataCount(256);

                    } else if(id->adressTable->tipo.compare("byte")==0 or id->adressTable->tipo.compare("logico")==0){

                                fileOut << "\t\tbyte ? \n";
                                updateDataCount(1);

                            } else {
                                fileOut << "\t\tsword ?\n";
                                updateDataCount(2);
                            }

                }
            }
            while(notNull){
                if(currentToken->cod == 'B'){
                    match('B');
                    id = currentToken;
                    match('H');
                    // Ação Semantica
                    if(id->adressTable->classe.compare("vazio")==0){
                        id->adressTable->classe = "variavel";
                    } else {
                        /**ERRO SEMANTICO**/
                        cout << id->lineNumber << ":identificador ja declarado [" << id->lexema << "].";
                    }
                    //Ação Semantica
                    id->adressTable->tipo = tabSimbNaoTerminais.search("TIPO")->tipo;

                    if(notNull){
                        if(currentToken->cod == '1'){
                            match('1');
                            SymbolNode * valor;
                            VALOR(&valor);

                             // Ação Semantica
                            if(id->adressTable->tipo != tabSimbNaoTerminais.search("VALOR")->tipo){
                                /**ERRO SEMANTICO**/
                                cout << id->lineNumber << ":tipos incompativeis.";
                            }

                            // Geração de Codigo
                            id->adressTable->end = dataCount;

                            if(id->adressTable->tipo.compare("string")==0){

                                fileOut << "\t\tbyte " << valor->lexema << "\n";
                                fileOut << "\t\tbyte " << 256 - valor->lexema.length() << " DUP(?)\n";
                                updateDataCount(256);

                            } else if(id->adressTable->tipo.compare("byte")==0){

                                    fileOut << "\t\tbyte " << valor->lexema << "\n";
                                    updateDataCount(1);

                                } else if(id->adressTable->tipo.compare("logico")==0){

                                            if(valor->lexema.compare("TRUE")==0){
                                                fileOut << "\t\tbyte 255\n";
                                            } else {
                                                fileOut << "\t\tbyte 0\n";
                                            }
                                            updateDataCount(1);

                                            } else {
                                                fileOut << "\t\tsword " << valor->lexema << "\n";
                                                updateDataCount(2);
                                            }
                        } else {

                            // Geração de Codigo
                            id->adressTable->end = dataCount;

                            if(id->adressTable->tipo.compare("string")==0){

                                fileOut << "\t\tbyte 256 DUP(?)\n";
                                updateDataCount(256);

                            } else if(id->adressTable->tipo.compare("byte")==0 or id->adressTable->tipo.compare("logico")==0){

                                        fileOut << "\t\tbyte ? \n";
                                        updateDataCount(1);

                                    } else {
                                        fileOut << "\t\tsword ?\n";
                                        updateDataCount(2);
                                    }

                        }
                    }
                } else notNull = false;
            }
            match('K');
        }
    }
}



/**
 *  Procedimento TIPO
 */
void SintAnalyzer::TIPO(){
    SymbolNode * tipo = tabSimbNaoTerminais.insert(0, "TIPO");
	// Ação Semantica
    if(currentToken->lexema.compare("integer")==0){
        tipo->tipo = "inteiro";
    } else if(currentToken->lexema.compare("byte")==0){
                tipo->tipo = "byte";
            } else if(currentToken->lexema.compare("boolean")==0){
                        tipo->tipo = "logico";
                    }else{
                        tipo->tipo = "string";
                    }
	match('2');
}

/**
 *  Procedimento VALOR
 */
void SintAnalyzer::VALOR(SymbolNode ** v2){
    if(currentToken != NULL){
        SymbolNode* valor = tabSimbNaoTerminais.insert('0', "VALOR");

        notNull = true;
        if(currentToken->lexema.compare("-") == 0){
            match('C');
            *v2 = currentToken->adressTable;
        } else {
            *v2 = currentToken->adressTable;
        }
        if(notNull){
            if(currentToken->cod == 'F'){
                valor->tipo = "inteiro";
                match('F');
            } else if(notNull){
                if(currentToken->cod == 'L'){
                    valor->tipo = "logico";
                    match('L');
                } else if(notNull){
                    if(currentToken->cod == 'M' || currentToken->cod == 'I'){
                        valor->tipo = "byte";
                        match('M');
                    } else {
                        valor->tipo = "string";
                        match('N');
                    }
                }
            }
        }
    }
}

/**
 *  Procedimento BLOCO
 */
void SintAnalyzer::BLOCO(){
	match('D');
	if(currentToken != NULL){
            notNull = true;
        if(currentToken->cod == 'H' || currentToken->cod == 'I' || currentToken->cod == '5' || currentToken->cod == '3' ||
            currentToken->cod == 'K' || currentToken->cod == '6' || currentToken->cod == '7'){

            while(notNull){
                if(currentToken->cod == 'H' || currentToken->cod == 'I' || currentToken->cod == '5' || currentToken->cod == '3' ||
                currentToken->cod == 'K' || currentToken->cod == '6' || currentToken->cod == '7'){
                    COMANDO();

                } else notNull = false;
            }
        }
	}
	match('E');
}

/**
 *  Procedimento COMANDO
 */
void SintAnalyzer::COMANDO(){

	if (currentToken->cod == 'H' || currentToken->cod == 'I') COMANDO_ATRIB();
	else if (currentToken->cod == '5') COMANDO_REPET();
	else if (currentToken->cod == '3') COMANDO_TESTE();
	else if (currentToken->cod == 'K') COMANDO_NULO();
	else if (currentToken->cod == '6') COMANDO_LEITURA();
	else if (currentToken->cod == '7') COMANDO_ESCRITA();
}

/**
 *  Procedimento COMANDO_ATRIB
 */
void SintAnalyzer::COMANDO_ATRIB(){
	LexRecord * id = currentToken;

	// Ação Semantica
    if(id->adressTable->classe.compare("vazio")==0){
        /**ERRO SEMANTICO**/
		cout << id->lineNumber << ":identificador nao declarado [" << id->lexema << "].";
    } else
        if(id->adressTable->classe.compare("variavel")!=0){
            /**ERRO SEMANTICO**/
            cout << id->lineNumber << ":classe de identificador incompatível [" << id->lexema << "].";
        }

	match('H');
	match('1');
	tempCount = 0;
	EXPRESSAO();

	// Ação Semantica
	if(id->adressTable->tipo != tabSimbNaoTerminais.search("EXPRESSAO")->tipo){
            if(id->adressTable->tipo.compare("inteiro")!=0 or tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("byte")!=0){
                /**ERRO SEMANTICO**/
                cout << id->lineNumber << ":tipos incompatíveis. ";
            }



    }

	// Geração de Codigo

	if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("byte")==0 or
	   tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("logico")==0){
		   fileOut << "\t\tmov al, DS:[" << tabSimbNaoTerminais.search("EXPRESSAO")->end << "]\n";
		   fileOut << "\t\tmov DS:[" << id->adressTable->end << "], al\n";

	   } else
		   if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("inteiro")==0){
				fileOut << "\t\tmov ax, DS:[" << tabSimbNaoTerminais.search("EXPRESSAO")->end << "]\n";
				fileOut << "\t\tmov DS:[" << id->adressTable->end << "], ax\n";

			} else
				if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("string")==0){
					fileOut << "\t\tmov si," << id->adressTable->end << "\n";
					fileOut << "\t\tmov di," << tabSimbNaoTerminais.search("EXPRESSAO")->end << "\n";
					std::string rotInicio = getLabel();
					fileOut << rotInicio << ":\n";
					fileOut << "\t\tmov al, DS:[di]\n";
					fileOut << "\t\tmov DS:[si], al\n";
					fileOut << "\t\tadd di, 1\n";
					fileOut << "\t\tadd si, 1\n";
					fileOut << "\t\tcmp al, 24h\n";
					fileOut << "\t\tjne " << rotInicio << "\n";

				}

	match('K');
}

/**
 *  Procedimento COMANDO_REPET
 */
void SintAnalyzer::COMANDO_REPET(){

	match('5');
	tempCount = 0;
	LexRecord * expressao = currentToken;
	EXPRESSAO();
	// Ação Semantica
	if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("logico")!=0){
        /**ERRO SEMANTICO**/
		cout << expressao->lineNumber << ":tipos incompatíveis.";
    }
    if(currentToken != NULL){

        // Geração de codigo
        string rotInicio = getLabel();
        string rotFim = getLabel();
        fileOut << rotInicio << ":\n";
        fileOut << "\t\tmov al, DS:[" << tabSimbNaoTerminais.search("EXPRESSAO")->end << "]\n";
        fileOut << "\t\tcmp al, 0\n";
        fileOut << "\t\tje " << rotFim << "\n";

        if (currentToken->cod == 'D'){
            BLOCO();
        }else{
            COMANDO();
        }

         // Refazer a EXPRESSAO antes de colocar o salto
        LexRecord * pontoAtual = currentToken;
        registroLexico.nextToken = expressao;
        currentToken = registroLexico.getNextToken();
        tempCount = 0;
        EXPRESSAO();
        registroLexico.nextToken = pontoAtual;
        currentToken = registroLexico.getNextToken();
        notNull = true;
        fileOut << "\t\tjmp " << rotInicio << "\n";
        fileOut << rotFim << ":\n";

    }
}


/**
 *  Procedimento COMANDO_TESTE
 */
void SintAnalyzer::COMANDO_TESTE(){
	match('3');
	tempCount = 0;

	EXPRESSAO();

	// Ação Semantica
	if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("logico")!=0){
        /**ERRO SEMANTICO**/
		cout << currentToken->lineNumber << ":tipos incompatíveis.";
    }

	match('P');

	string rotFalso = getLabel();
	string rotFim = getLabel();

	if(currentToken != NULL){

        // Geração de codigo
        fileOut << "\t\tmov al, DS:[" << tabSimbNaoTerminais.search("EXPRESSAO")->end << "]\n";
        fileOut << "\t\tcmp al, 255\n";
        fileOut << "\t\tjne " << rotFalso << "\n";

        if (currentToken->cod == 'D'){
            BLOCO();
        }else{
            COMANDO();
        }

        fileOut << "\t\tjmp " << rotFim << "\n";

    }

    if(currentToken != NULL){

        fileOut << rotFalso << ":\n";

        if (currentToken->cod == '4'){
            match('4');

            if(currentToken != NULL){

                if (currentToken->cod == 'D'){
                    BLOCO();
                }else{
                    COMANDO();
                }

            }
        }
        fileOut << rotFim << ":\n";
    }
}


/**
 *  Procedimento COMANDO_NULO
 */
void SintAnalyzer::COMANDO_NULO(){
	match('K');
}


/**
 *  Procedimento COMANDO_LEITURA
 */
void SintAnalyzer::COMANDO_LEITURA(){
	match('6');
	match('B');

	// Ação Semantica
	if(currentToken->adressTable->classe.compare("vazio")!=0){
        if(currentToken->adressTable->tipo.compare("byte")!=0 and currentToken->adressTable->tipo.compare("inteiro")!=0 and currentToken->adressTable->tipo.compare("string")!=0){
            /**ERRO SEMANTICO**/
            cout << currentToken->lineNumber << ":tipos incompativeis";
        }
	}else{
	    /**ERRO SEMANTICO**/
        cout << currentToken->lineNumber << ":identificador nao declarado [" << currentToken->lexema << "].";
	}

	// Geração de codigo
	// interrupção para leitura do teclado
	int bufferEnd = tempCount;
	updateTempCount(2);
	fileOut << "\t\tmov dx, " << bufferEnd << "\n";
	fileOut << "\t\tmov al, 255\n";
	fileOut << "\t\tmov DS:[" << bufferEnd << "], al\n";
	fileOut << "\t\tmov ah, 0Ah\n";
	fileOut << "\t\tint 21h\n";

	// quebra de linha
	fileOut << "\t\tmov ah, 02h\n";
	fileOut << "\t\tmov dl, 0Dh\n";
	fileOut << "\t\tint 21h\n";
	fileOut << "\t\tmov dl, 0Ah\n";
	fileOut << "\t\tint 21h\n";

	if(currentToken->adressTable->tipo.compare("byte")==0 or currentToken->adressTable->tipo.compare("inteiro")==0){

        string rotNaoNegativo = getLabel();
		string rotInicio = getLabel();
		string rotFim = getLabel();

		fileOut << "\t\tmov di, " << bufferEnd+2 << "\n";
		fileOut << "\t\tmov ax, 0\n";
		fileOut << "\t\tmov cx, 10\n";
		fileOut << "\t\tmov dx, 1\n";
		fileOut << "\t\tmov bh, 0\n";
		fileOut << "\t\tmov bl, DS:[di]\n";
		fileOut << "\t\tcmp bx, 2Dh\n";
		fileOut << "\t\tjne " << rotNaoNegativo << "\n";
		fileOut << "\t\tmov dx, -1\n";
		fileOut << "\t\tadd di, 1\n";
		fileOut << "\t\tmov bl, DS:[di]\n";

		fileOut << rotNaoNegativo << ":\n";
		fileOut << "\t\tpush dx\n";
		fileOut << "\t\tmov dx, 0\n";

		fileOut << rotInicio << ":\n";
		fileOut << "\t\tcmp bx, 0Dh\n";
		fileOut << "\t\tje " << rotFim << "\n";
		fileOut << "\t\timul cx\n";
		fileOut << "\t\tadd bx, -48\n";
		fileOut << "\t\tadd ax, bx\n";
		fileOut << "\t\tadd di, 1\n";
		fileOut << "\t\tmov bh, 0\n";
		fileOut << "\t\tmov bl, DS:[di]\n";
		fileOut << "\t\tjmp " << rotInicio << "\n";

		fileOut << rotFim << ":\n";
		fileOut << "\t\tpop cx\n";
		fileOut << "\t\timul cx\n";

		if(currentToken->adressTable->tipo.compare("byte")==0){
            fileOut << "\t\tmov DS:[" << currentToken->adressTable->end << "], al\n";
		}else{
            fileOut << "\t\tmov DS:[" << currentToken->adressTable->end << "], ax\n";
		}
	}else
        if(currentToken->adressTable->tipo.compare("string")==0){

            string rotInicio = getLabel();
			string rotFim = getLabel();
			fileOut << "\t\tmov si, " << currentToken->adressTable->end << "\n";
			fileOut << "\t\tmov di, " << bufferEnd+2 << "\n";
			fileOut << rotInicio << ":\n";
			fileOut << "\t\tmov al, DS:[di]\n";
			fileOut << "\t\tcmp al, 0Dh\n";
			fileOut << "\t\tje " << rotFim << "\n";
			fileOut << "\t\tmov DS:[si], al\n";
			fileOut << "\t\tadd di, 1\n";
			fileOut << "\t\tadd si, 1\n";
			fileOut << "\t\tjmp " << rotInicio << "\n";
			fileOut << rotFim << ":\n";
			fileOut << "\t\tmov al, 24h\n";
			fileOut << "\t\tmov DS:[si], al\n";

        }

	match('H');
	match('K');
}

/**
 *  Procedimento COMANDO_ESCRITA
 */
void SintAnalyzer::COMANDO_ESCRITA(){

    bool quebraLinha = false;
    if(currentToken->adressTable->lexema.compare("writeln")==0){
        quebraLinha = true;
    }

	match('7');
	match('B');
	tempCount = 0;
	EXPRESSAO();

	// Ação Semantica
    if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("byte")!=0 and
       tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("inteiro")!=0 and
       tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("string")!=0){

        /**ERRO SEMANTICO**/
        cout << currentToken->lineNumber << ":tipos incompativeis";

    }

	// Geração de codigo
	{

	    int stringTempEnd = tempCount;

	    if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("byte")==0 or tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("inteiro")==0){

            if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("byte")==0){
                fileOut << "\t\tmov ah, 0\n";
				fileOut << "\t\tmov al, DS:[" << tabSimbNaoTerminais.search("EXPRESSAO")->end << "]\n";
				updateTempCount(1);
            } else {
                fileOut << "\t\tmov ax, DS:[" << tabSimbNaoTerminais.search("EXPRESSAO")->end << "]\n";
                updateTempCount(2);
            }


			string rotPositivo = getLabel();
			string rotLoop1 = getLabel();
			string rotLoop2 = getLabel();
			fileOut << "\t\tmov di, " << stringTempEnd << "\n";
			fileOut << "\t\tmov cx, 0\n";
			fileOut << "\t\tcmp ax, 0\n";
			fileOut << "\t\tjge " << rotPositivo << "\n";
			fileOut << "\t\tmov bl, 2Dh\n";
			fileOut << "\t\tadd di, 1\n";
			fileOut << "\t\tneg ax\n";
            fileOut << rotPositivo << ":\n";
			fileOut << "\t\tmov bx, 10\n";
            fileOut << rotLoop1 << ":\n";
			fileOut << "\t\tadd cx, 1\n";
			fileOut << "\t\tmov dx, 0\n";
			fileOut << "\t\tidiv bx\n";
			fileOut << "\t\tpush dx\n";
			fileOut << "\t\tcmp ax, 0\n";
			fileOut << "\t\tjne " << rotLoop1 << "\n";
            fileOut << rotLoop2 << ":\n";
			fileOut << "\t\tpop dx\n";
			fileOut << "\t\tadd dx, 48\n";
			fileOut << "\t\tmov ds:[di], dl\n";
			fileOut << "\t\tadd di, 1\n";
			fileOut << "\t\tadd cx, -1\n";
			fileOut << "\t\tcmp cx, 0\n";
			fileOut << "\t\tjne " << rotLoop2 << "\n";
			// grava o fim da string "$"
			fileOut << "\t\tmov dl, 24h\n";
			fileOut << "\t\tmov DS:[di], dl\n";

	    }else
            if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("string")==0){

                stringTempEnd = tabSimbNaoTerminais.search("EXPRESSAO")->end;

            }
        // mostra a string na tela
		fileOut << "\t\tmov dx, " << stringTempEnd << "\n";
		fileOut << "\t\tmov ah, 09h\n";
		fileOut << "\t\tint 21h\n";

	}

    if(currentToken != NULL){
            notNull = true;
      // if (currentToken->cod == 'B'){
            while(notNull){
                if(currentToken->cod == 'B'){

                    match('B');
                    tempCount = 0;
                    EXPRESSAO();

                    // Geração de codigo
                    {
                        int stringTempEnd = tempCount;

                        if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("byte")==0 or tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("inteiro")==0){

                            if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("byte")==0){
                                fileOut << "\t\tmov ah, 0\n";
                                fileOut << "\t\tmov al, DS:[" << tabSimbNaoTerminais.search("EXPRESSAO")->end << "]\n";
                                updateTempCount(1);
                            } else {
                                fileOut << "\t\tmov ax, DS:[" << tabSimbNaoTerminais.search("EXPRESSAO")->end << "]\n";
                                updateTempCount(2);
                            }


                            string rotPositivo = getLabel();
                            string rotLoop1 = getLabel();
                            string rotLoop2 = getLabel();
                            fileOut << "\t\tmov di, " << stringTempEnd << "\n";
                            fileOut << "\t\tmov cx, 0\n";
                            fileOut << "\t\tcmp ax, 0\n";
                            fileOut << "\t\tjge " << rotPositivo << "\n";
                            fileOut << "\t\tmov bl, 2Dh\n";
                            fileOut << "\t\tadd di, 1\n";
                            fileOut << "\t\tneg ax\n";
                            fileOut << rotPositivo << ":\n";
                            fileOut << "\t\tmov bx, 10\n";
                            fileOut << rotLoop1 << ":\n";
                            fileOut << "\t\tadd cx, 1\n";
                            fileOut << "\t\tmov dx, 0\n";
                            fileOut << "\t\tidiv bx\n";
                            fileOut << "\t\tpush dx\n";
                            fileOut << "\t\tcmp ax, 0\n";
                            fileOut << "\t\tjne " << rotLoop1 << "\n";
                            fileOut << rotLoop2 << ":\n";
                            fileOut << "\t\tpop dx\n";
                            fileOut << "\t\tadd dx, 48\n";
                            fileOut << "\t\tmov ds:[di], dl\n";
                            fileOut << "\t\tadd di, 1\n";
                            fileOut << "\t\tadd cx, -1\n";
                            fileOut << "\t\tcmp cx, 0\n";
                            fileOut << "\t\tjne " << rotLoop2 << "\n";
                            // grava o fim da string "$"
                            fileOut << "\t\tmov dl, 24h\n";
                            fileOut << "\t\tmov DS:[di], dl\n";

                        }else
                            if(tabSimbNaoTerminais.search("EXPRESSAO")->tipo.compare("string")==0){

                                stringTempEnd = tabSimbNaoTerminais.search("EXPRESSAO")->end;
